[project]
name = "ecobreathe-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.129.1",
    "httpx>=0.27.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.41.0",
]
